[project]
name = "portfolio-risk-tool"
version = "1.0.0"
description = "Command-line portfolio risk analysis tool built with FP and TDD"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
